--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <div class="jumbotron text-center">
   <h1>Company</h1> 
   <p>We specialize in blablabla</p> 
-  <form class="form-inline">
+  <form class="form-inline" action="prova.php" method="POST">
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
       <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
+        <button type="submit" class="btn btn-danger">Subscribe</button>
       </div>
     </div>
   </form>
@@ -50,7 +50,7 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top col-lg-11">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
