--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>We specialize in blablabla</p>
   <form class="form-inline" action="prova.php" method="POST">
     <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+      <input type="email" class="form-control" size="50" placeholder="Email Address">
       <div class="input-group-btn">
         <button type="submit" class="btn btn-danger">Subscribe</button>
       </div>
